scrollbar and some bug fixxed

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500;600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
+
 *{
   margin:0;
   padding:0;
   box-sizing: border-box;
   font-family: 'Jost';
+ 
 }
-body{
-  /* overflow:hidden; */
+::selection{
+  color:black;
+  background:white;
+}
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 10px black; 
+}
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #FF008A; 
+    border-radius: 15px;
 }
