--- a/src/styles/scss/Navbar.scss
+++ b/src/styles/scss/Navbar.scss
@@ -6,7 +6,7 @@
     // justify-content:center;
     color:$primary_text;
     .name{
-        font-size: 28px;
+        font-size: 20px;
         padding:20px;
         font-weight: 400;
     }
@@ -40,6 +40,9 @@
 
 @media only screen and (max-width:835px){
     .navbar{
+    .name{
+        font-size:20px;
+    }
         nav{
             display:none;
             position:absolute;
@@ -63,7 +66,6 @@
 @media only screen and (max-width:370px){
     .navbar{
         .name{
-            font-size:20px;
         }
     }
 }
